--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.7.0",
+    "react-scripts": "^5.0.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11"
   },
