--- a/server/.env
+++ b/server/.env
@@ -2,4 +2,6 @@ NODE_ENV=production
 MONGODB_URI=mongodb://localhost:27017/week7-devops
 JWT_SECRET=_JWT_secret_Key_Thamsanqa
 PORT=5000
-cloudinary_cloud_name= mongodb+srv://ethamsanqa:<db_password>@week7.lpkuqwo.mongodb.net/
+SENTRY_DSN=https://c5b429500b4009627be365a7ee66cfaf@o4509691583070208.ingest.de.sentry.io/4509700614586448
+
+
