--- a/server/package.json
+++ b/server/package.json
@@ -5,14 +5,17 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon server.js && pnpm sentry:sourcemaps",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "sentry:sourcemaps": "sentry-cli sourcemaps inject --org none-g72 --project node .//out && sentry-cli sourcemaps upload --org none-g72 --project node .//out"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "packageManager": "pnpm@10.12.1",
   "dependencies": {
+    "@sentry/cli": "^2.50.0",
+    "@sentry/node": "^9.40.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
